Add ability to import external functions from either RM or KM device upgrade files.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@373 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -78,20 +78,23 @@ the Java Runtime Environemt installed, version 1.4.1 or later.  Either of these 
 </tr>
 <tr>
 <th>Open...</th>
-<td>Bring up a file dialog allowing you to load an existing Remote Master Device Upgrade (rmdu) file.</td>
+<td>Bring up a file dialog allowing you to load an existing RemoteMaster Device Upgrade file (*.rmdu).  To load a
+KeymapMaster Device Upgrade file (*.txt), change the <b>Files of type:</b> field to <b>KeyMapMaster device upgrade files</b>.</td>
 </tr>
 <tr>
 <th>Save</th>
-<td>This menu will save the device upgrade to a file.  This item will be diabled unless a device upgrade file was loaded, or the "Save as..." item has been used.</td>
+<td>This menu will save the device upgrade to a file.  This item will be diabled unless a RemoteMaster Device Upgrade file was loaded, or the "Save as..." item has been used.</td>
 </tr>
 <tr>
 <th>Save&nbsp;as...</th>
 <td>Save the device upgrade to a different file name.  The default file name will be the name of the file loaded, or the name used for "Save as...", or the contents of the <b>Description</b> field.
 </tr>
+<!--
 <tr>
 <th>Import&nbsp;KM&nbsp;file...</th>
 <td>Brings up a file dialog allowing you to load an existing KM device upgrade.</td>
 </tr>
+-->
 <tr>
 <th>Import&nbsp;from&nbsp;Clipboard</th>
 <td>Imports a device upgrade from the clipboard.  This is useful if you click on a link to a device upgrade (either KM or RM), and your browser simply displays the text of the upgrade.  Simply use the context-menu (right-click) to <b>Select All</b> and then <b>Copy</b> the entire upgrade to the clipboard.
@@ -270,6 +273,8 @@ the function parameters on the External Functions panel.<p>
 <p>Other than the differnce in the data required to define an external function,
 the External Function panel is used in exactly the same way as the Functions panel.
 Refer to the <a href="#functions">Functions Panel</a> for more information.</p>
+<p>You can also import functions from an RM or KM device upgrade file.  Use the <b>Import</b> button or the <b>Import</b>
+item on the context menu.</p>
 <table>
   <tr>
     <th>Name</th>
