Update protocol definitions and lists of supported protocols.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@422 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -31,6 +31,7 @@
         <li><a href="#layout">Layout</a></li>
         <li><a href="#keymap">Key Map</a></li>
         <li><a href="#output">Output</a></li>
+        <li><a href="#protocols">Protocols</a></li>
 <!--
     </ul>
 -->
@@ -573,6 +574,115 @@ into the IR Protocols tab, press the <b>Copy</b> button or use the
 the context menu (right-click and select <b>Copy</b>).</p></td>
 </tr>
 </table>
+<h2><a name="protocols"></a>Protocols</h2>
+<p>RM does not yet support all the protocols supported by KM.
+Here is a list of the protocols that SHOULD work.  If you find a
+problem with one of these, please
+<a href="http://sourceforge.net/tracker/?func=add&group_id=30560&atid=399666">submit a Bug Report</a>.</p>
+<table border=0>
+<tr valign=top>
+<td><ul>
+<li>Aiwa
+<li>Aiwa2
+<li>Aiwa Combo
+<li>Akai
+<li>Anthem
+<li>Apex 1100W
+<li>Audiovox
+<li>B&K
+<li>Blaupunkt
+<li>Boston Accoustics
+<li>Boston Official
+<li>Denon
+<li>Denon Combo (Official)
+<li>Denon Combo
+<li>Device Combiner
+<li>Dishplayer
+<li>Dishplayer Network
+<li>Echostar 2200
+<li>Emerson
+<li>F12
+<li>GI 4DTV Hacked
+<li>GI 4DTV Official
+<li>GI Cable
+<li>HK Combo
+<li>Jerrold
+<li>JVC
+<li>JVC-48
+</ul></td>
+<td><ul>
+<li>Kaseikyo
+<li>Mitsubishi
+<li>NEC1
+<li>NEC2
+<li>NEC Combo
+<li>NEC1 Combo
+<li>NEC1 2DEV Combo
+<li>NECx1
+<li>NECx2
+<li>Nokia Quad
+<li>Pace
+<li>Panasonic (old)
+<li>Panasonic
+<li>Panasonic VCR Combo
+<li>Panasonic Mixed Combo
+<li>Panasonic Combo2
+<li>Panasonic Multi-Device (Hacked)
+<li>Panasonic Combo (flawed)
+<li>Panasonic2 (LCD)
+<li>Pioneer
+<li>Pioneer DVD
+<li>Pioneer DVD2
+<li>Pioneer MIX
+<li>Pioneer 2CMD
+<li>Pioneer 3DEV
+<li>Proton
+<li>RC-5
+</ul></td>
+<td><ul>
+<li>RC-5x
+<li>RC-6
+<li>RC6-M-20n
+<li>RC6-M-24n
+<li>RCA
+<li>RCA (Old)
+<li>RCA Combo (Official)
+<li>RECS80 (45)
+<li>RECS80 (68)
+<li>ReplayTV (Simple)
+<li>ReplayTV (Advanced)
+<li>ReplayTV (Official)
+<li>Scientific Atlanta
+<li>Sharp
+<li>Sharp DVD
+<li>Sony 12/15
+<li>Sony20
+<li>Sony Combo (old)
+<li>Sony Combo (new)
+<li>Sony DSP
+<li>Thomson
+<li>TiVo (Advanced)
+<li>TiVo (Official)
+<li>TiVo (Official 2-byte)
+<li>X10
+<li>Zenith
+</ul>
+</td>
+</tr>
+</table>
+<p>This is the list of protocols that are present in RM, but are <B>NOT</b> supported:<p>
+<ul>
+<li>NEC 2DEV Combo (*)
+<li>Panasonic MIX Combo (*)
+<li>Sony Egg (*)
+<li>Teac-K (*)
+</ul>
+<p>Here is the list of protocols that are not <b>yet</b> supported:</p>
+<ul>
+<li>Pause Protocol
+<li>RC-5/5x Combo
+<li>RCA Combo (w/Duration)
+</ul>
 
 <!--
 Key Move Code block:
