--- a/Readme.html
+++ b/Readme.html
@@ -582,6 +582,7 @@ problem with one of these, please
 <table border=0>
 <tr valign=top>
 <td><ul>
+<li>Acer Keyboard
 <li>Aiwa
 <li>Aiwa2
 <li>Aiwa Combo
@@ -608,9 +609,9 @@ problem with one of these, please
 <li>HK Combo
 <li>Jerrold
 <li>JVC
-<li>JVC-48
 </ul></td>
 <td><ul>
+<li>JVC-48
 <li>Kaseikyo
 <li>Mitsubishi
 <li>NEC1
@@ -637,9 +638,9 @@ problem with one of these, please
 <li>Pioneer 2CMD
 <li>Pioneer 3DEV
 <li>Proton
-<li>RC-5
 </ul></td>
 <td><ul>
+<li>RC-5
 <li>RC-5x
 <li>RC-6
 <li>RC6-M-20n
