Fix protocol entry Dish Network:5 Add RC-5/5x Combo (the "ugly" version), thanks Jon Armstrong Added RECS90 (90) protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@448 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -496,8 +496,7 @@ shift states of the buttons, you choose the shift state by selecting one of the
 <b>Mode</b> radio buttons.</p>
 <p>The Layout panel shows information about the buttons in various ways:
 <ul>
-<li>Buttons will display their names in a fly-over window when you hold the mouse
-pointer over them.</li>
+<li>Buttons will display their names (and any assigned function) in a fly-over window when you hold the mouse pointer over them.</li>
 <li>Buttons with functions assigned will be drawn in yellow.</li>
 <li>Buttons in the keymap for the current device type will be outlined in orange.</li>
 <li>The selected button will be outlined in white.  The <b>Button:</b> field will show
