--- a/Readme.html
+++ b/Readme.html
@@ -116,7 +116,9 @@ KeymapMaster Device Upgrade file (*.txt), change the <b>Files of type:</b> field
 <table>
 <tr>
 <th>Look&nbsp;and&nbsp;Feel</th>
-<td>Allows you to select the over all look and feel used by RemoteMaster.  Most of the time this should be left to the default value, but you might want to experiment to see how RemoteMaster would look on other platforms.</td>
+<td>Allows you to select the over all look and feel used by RemoteMaster.  Most Windows users will want to use the <b>Windows</b> Look and Feel, but I recommend the <b>Metal</b> Look and Feel.  The reason for this is simple:  the <b>Windows</b> Look and Feel does not highlight
+the current cell in the Functions panel.
+</td>
 </tr>
 <tr>
 <th>Prompt&nbsp;to&nbsp;Save</th>
@@ -142,6 +144,10 @@ KeymapMaster Device Upgrade file (*.txt), change the <b>Files of type:</b> field
 <td><p>Allows you to choose the set of remotes that RemoteMaster will display. Your choices are <b>All</b>, meaning all remotes for which RemoteMaster can find Remote Definition Files (RDFs), or <b>Preferred</b>, meaning only those remotes that are in your preferred list.</p>
 <p>You can manage the list of preferred remotes using <b>Edit Preferred</b>.</p>
 </tr>
+<tr>
+<th>Function&nbsp;names</th>
+<td>Allows you to choose the function names used when creating a new upgrade.  Your choices are <b>Default</b>, meaning the same as KM, or <b>Custom</b>, meaning your own custom list.
+<p>You can edit the list of custom names using <b>Edit custom names...</b>.
 </table>
 <h2><a name="basic"></a>Basic Information</h2>
 <p>Some of basic information about the current Device Upgrade is always visible:<p>
