--- a/Readme.html
+++ b/Readme.html
@@ -147,7 +147,7 @@ the current cell in the Functions panel.
 <tr>
 <th>Function&nbsp;names</th>
 <td>Allows you to choose the function names used when creating a new upgrade.  Your choices are <b>Default</b>, meaning the same as KM, or <b>Custom</b>, meaning your own custom list.
-<p>You can edit the list of custom names using <b>Edit custom names...</b>.
+<p>You can edit the list of custom names using <b>Edit custom names...</b>.  When editing the custom names, there is a button to import the names of the buttons on the current remote.
 </table>
 <h2><a name="basic"></a>Basic Information</h2>
 <p>Some of basic information about the current Device Upgrade is always visible:<p>
