Improve importing of DC upgrades that use RC-5 protocol.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@502 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -25,7 +25,7 @@
         </li>
         <li><a href="#basic">Basic Info</a></li>
         <li><a href="#setup">Setup</a></li>
-	<li><a href="#devcomb">Device Combiner</a></li>
+        <li><a href="#devcomb">Device Combiner</a></li>
         <li><a href="#functions">Functions</a></li>
         <li><a href="#extfunctions">External&nbsp;Functions</a></li>
         <li><a href="#buttons">Buttons</a></li>
@@ -389,7 +389,7 @@ then click the desired function in the context menu.</li>
 <li>Highlight the cell where you want to assing a function by clicking on it, then
 double-click the function you want to assign to it.</li>
 </ol>
-<!--
+<div class="noshow">
 At the top of the [Buttons] sheet (cell G2) is an unlabeled check
 box. This is the "DISABLE Combined Key Move Code" setting. When
 checked (it mirrors the check box on the [Setup] sheet), any
@@ -513,7 +513,7 @@ by Key Moves created on the [Buttons] sheet.
 Once all your Key Moves have been entered, the Key Move Code
 block on the [Setup] sheet will contain the required code for
 pasting into IR's [Key Moves] tab using the [Import] button.
--->
+</div>
 
 <h2><a name="layout"></a>The Layout Panel</h2>
 <p>The Layout panel works very much like the Buttons panel, except that
@@ -569,7 +569,7 @@ the <a href="#buttons">Buttons</a> or <a href="#layout">Layout</a> panels.</p>
 pasting into the IR Devices tab, press the <b>Copy</b> button or use
 the context menu (right-click and select <b>Copy</b>).</p></td>
 </tr>
-<!--
+<div class="noshow">
 DISABLE Combined Key Move Code check box:
 -----------------------------------------
 You can temporarily exclude Key Moves (created on the [Buttons]
@@ -584,7 +584,7 @@ There are also check boxes for this setting on the [Buttons]
 (cell G2), and [Key Moves] (cell I1) sheets so that you can
 quickly ENABLE or DISABLE and see how it affects the current
 mapping.
--->
+</div>
 <tr>
 <th>Upgrade&nbsp;Protocol&nbsp;Code</th>
 <td>Again, no data entry is allowed here. As RM works its
