--- a/Readme.html
+++ b/Readme.html
@@ -642,6 +642,7 @@ problem with one of these, please
 <li>JVC
 <li>JVC-48
 <li>Kaseikyo
+<li>Lumagen
 </ul></td>
 <td><ul>
 <li>Mitsubishi
@@ -670,6 +671,7 @@ problem with one of these, please
 <li>Pioneer MIX
 <li>Pioneer 2CMD
 <li>Pioneer 3DEV
+<li>Pioneer 4DEV
 <li>Proton
 <li>RC-5
 <li>RC-5x
