*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@517 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -609,8 +609,7 @@ the context menu (right-click and select <b>Copy</b>).</p></td>
 Here is a list of the protocols that SHOULD work.  If you find a
 problem with one of these, please
 <a href="http://sourceforge.net/tracker/?func=add&group_id=30560&atid=399666">submit a Bug Report</a>.</p>
-<table border=0>
-<tr valign=top>
+<table border=0><tr valign=top>
 <td><ul>
 <li>Acer Keyboard
 <li>Aiwa
@@ -628,6 +627,7 @@ problem with one of these, please
 <li>Denon Combo (Official)
 <li>Denon Combo
 <li>Device Combiner
+<li>DirecTV
 <li>Dishplayer
 <li>Dish Network
 <li>Dish Network Combo
@@ -655,13 +655,14 @@ problem with one of these, please
 <li>NECx1
 <li>NECx2
 <li>Nokia Quad
+<li>NRC17
 <li>Pace
 <li>Panasonic (old)
 <li>Panasonic
 <li>Panasonic MIX Combo
 <li>Panasonic VCR Combo
 <li>Panasonic Mixed Combo
-<li>Panasonic Combo2
+<li>Panasonic Combo
 <li>Panasonic Multi-Device (Hacked)
 <li>Panasonic Combo (flawed)
 <li>Panasonic2 (LCD)
@@ -710,8 +711,7 @@ problem with one of these, please
 <li>X10
 <li>Zenith
 </ul></td>
-</tr>
-</table>
+</tr></table>
 <p>Here is the list of protocols that are not <b>yet</b> supported:</p>
 <ul>
 <li>Fujitsu
