Change parsing of RDF file names for Nils
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@532 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -56,7 +56,7 @@ the Java Runtime Environemt installed, version 1.4.1 or later.  Either of these 
 <li>If you haven't already, download and install Java, version 1.4.1 or later.  You can download it from the <a href="http://java.sun.com/j2se/downloads/index.html">J2SE Download</a> page.  Either the Java Developer Kit (JDK) or the Java Runtime Environment (JRE) will do.</li>
 <li>Download the latest version of Remote Master from <a href="https://sourceforge.net/project/showfiles.php?group_id=30560&package_id=22596">SourceForge</a>, and unzip it to the directory of your choice, preserving directory names.</li>
 <li>If you are using a version of Windows (95/98/NT/XP), double-click on the <b><tt>Setup.bat</tt></b> and then click <b>Yes</b>.</li>
-<li>If you haven't already, download the lastest version of the Remote Definition Files (RDFs) from the <a href="http://groups.yahoo.com/group/jp1/files/2.%20Tools/">JP1 Yahoo Group</a>.</li>
+<li>If you haven't already, download the lastest version of the Remote Definition Files (RDFs) from the <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=7">Tools</a> section of the <a href=http://www.hifi-remote.com/forums/>JP1 Remotes Forums</a>.</li>
 <li>Unzip it to the directory of your choice.  It is recommended that you do <b>NOT</b> place it in the same directory as you placed Remote Master.</li>
 </ol>
 <p>That's it, Remote Master is now ready for your use!  There are a few different ways to start Remote Master:
