Add ability to import raw upgrades.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@574 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -21,6 +21,7 @@
             <ul>
                 <li><a href="#filemenu">File</a></li>
                 <li><a href="#options">Options</a></li>
+                <li><a href="#advanced">Advanced</a><li>
             </ul>
         </li>
         <li><a href="#basic">Basic Info</a></li>
@@ -148,6 +149,21 @@ the current cell in the Functions panel.
 <th>Function&nbsp;names</th>
 <td>Allows you to choose the function names used when creating a new upgrade.  Your choices are <b>Default</b>, meaning the same as KM, or <b>Custom</b>, meaning your own custom list.
 <p>You can edit the list of custom names using <b>Edit custom names...</b>.  When editing the custom names, there is a button to import the names of the buttons on the current remote.
+</table>
+<h3><a name="advanced"</a>Advanced</h2></h3>
+<p>The Advanced menu provides advanced functions for expert users</p>
+<table>
+<tr>
+<th><u>M</u>anual&nbsp;Settings...</th>
+<td>Allows you to define and edit a new protocol that uses Manual Settings.  <b>This is not yet complete</b>.</td>
+</tr>
+<tr>
+<th><u>P</u>rotocol&nbsp;Editor...</th>
+<td>Allows you create a protocol definition for future inclusion in protocols.ini.  <b>This is not yet complete</b></td>
+</tr>
+<tr>
+<th><u>I</u>mport&nbsp;Raw&nbsp;Upgrade...</th>
+<td>Imports a raw hex device upgrade.  This is useful when a remote is sent back to UEI to have a device upgrade added.</td>
 </table>
 <h2><a name="basic"></a>Basic Information</h2>
 <p>Some of basic information about the current Device Upgrade is always visible:<p>
