--- a/Readme.html
+++ b/Readme.html
@@ -122,6 +122,9 @@ the current cell in the Functions panel.
 </td>
 </tr>
 <tr>
+<th><u>F</u>ont&nbsp;size</th>
+<td>Allows you to <i>i</i>ncrease or <i>d</i>decrease the size of the fonts used by RemoteMaster.</td>
+</tr><tr>
 <th>Prompt&nbsp;to&nbsp;Save</th>
 <td>Allows you to specify when Remote Master will prompt you to save your Device Upgrade.  The valid values are:
 <table>
