--- a/Readme.html
+++ b/Readme.html
@@ -57,7 +57,8 @@ the Java Runtime Environemt installed, version 1.4.1 or later.  Either of these 
 <li>If you haven't already, download and install Java, version 1.4.1 or later.  You can download it from the <a href="http://java.sun.com/j2se/downloads/index.html">J2SE Download</a> page.  Either the Java Developer Kit (JDK) or the Java Runtime Environment (JRE) will do.</li>
 <li>Download the latest version of Remote Master from <a href="https://sourceforge.net/project/showfiles.php?group_id=30560&package_id=22596">SourceForge</a>, and unzip it to the directory of your choice, preserving directory names.</li>
 <li>If you are using a version of Windows (95/98/NT/XP), double-click on the <b><tt>Setup.bat</tt></b> and then click <b>Yes</b>.</li>
-<li>If you haven't already, download the lastest version of the Remote Definition Files (RDFs) from the <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=7">Tools</a> section of the <a href=http://www.hifi-remote.com/forums/>JP1 Remotes Forums</a>.</li>
+<li>If you haven't already, download the lastest version of the Remote Definition Files (RDFs) from the 
+<a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=81">Main</a> <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=7">Tools</a> section of the <a href="http://www.hifi-remote.com/forums/dload.php">File Section</a> of the <a href=http://www.hifi-remote.com/forums/>JP1 Remotes Forums</a>.</li>
 <li>Unzip it to the directory of your choice.  It is recommended that you do <b>NOT</b> place it in the same directory as you placed Remote Master.</li>
 </ol>
 <p>That's it, Remote Master is now ready for your use!  There are a few different ways to start Remote Master:
@@ -67,6 +68,7 @@ the Java Runtime Environemt installed, version 1.4.1 or later.  Either of these 
 <li>Double-click on a Remote Master Device Upgrade file (*.rmdu).</li>
 <li>In Internet Explorer, click on a link to a Remote Master Device Upgade file (*.rmdu).</li>
 </ol>
+<p>There is a short tutorial available for RM.  See <a href="http://controlremote.sourceforge.net/rmhelp/rmhelp.html">JP1 - Just How Easy Is It?</url>
 <h1><a name="main"></a>Using Remote Master</h1>
 <p>Remote Master was loosely based on Keymap Master, so there are many similarities between the two.  Anyone familiar with Keymap Master will have no trouble using Remote Master.</p>
 <p>However, because Remote Master is a true application, while Keymap Master is a spreadsheet that behaves like an application, the Remote Master user interface does have some significant differences from Keymap Master.</p>
@@ -123,7 +125,7 @@ the current cell in the Functions panel.
 </tr>
 <tr>
 <th><u>F</u>ont&nbsp;size</th>
-<td>Allows you to <i>i</i>ncrease or <i>d</i>decrease the size of the fonts used by RemoteMaster.</td>
+<td>Allows you to <u>i</u>ncrease or <u>d</u>ecrease the size of the fonts used by RemoteMaster.</td>
 </tr><tr>
 <th>Prompt&nbsp;to&nbsp;Save</th>
 <td>Allows you to specify when Remote Master will prompt you to save your Device Upgrade.  The valid values are:
